--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: sans-serif;
-  background: linear-gradient(#302f3d, #050507);
+  background: linear-gradient(#46474b, #050507);
   min-height: 100vh;
 }
 
